Bug #1660 - User Profile > Recent activity sidebar overflows if there is video content

--- a/wp-content/themes/openlab/style.less
+++ b/wp-content/themes/openlab/style.less
@@ -1393,6 +1393,9 @@ body{
             .fa.fa-undo{
                 font-size: 11px;
             }
+            img{
+                max-width: 100%;
+            }
         }
         ul.sidebar-nav{
             margin: 0;
